--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f8c" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SEOLOGY.AI – Webflow HTML Website Template</title>
-  <meta content="SEOLOGY.AI is a premium Webflow template built for digital agencies that value creativity and precision. With a dark aesthetic and refined 3D animations, it exudes modern sophistication." name="description">
-  <meta content="SEOLOGY.AI – Webflow HTML Website Template" property="og:title">
-  <meta content="SEOLOGY.AI is a premium Webflow template built for digital agencies that value creativity and precision. With a dark aesthetic and refined 3D animations, it exudes modern sophistication." property="og:description">
-  <meta content="SEOLOGY.AI – Webflow HTML Website Template" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium Webflow template built for digital agencies that value creativity and precision. With a dark aesthetic and refined 3D animations, it exudes modern sophistication." property="twitter:description">
+  <title>SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues</title>
+  <meta content="The first SEO platform powered by Claude AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." name="description">
+  <meta content="SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues" property="og:title">
+  <meta content="The first SEO platform powered by Claude AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="og:description">
+  <meta content="SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues" property="twitter:title">
+  <meta content="The first SEO platform powered by Claude AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -131,7 +131,7 @@
         <div class="padding-global">
           <div class="container-large">
             <div class="padding-section-large">
-              <div class="subtitle">Global Creative Partners:</div>
+              <div class="subtitle">Platform Integrations:</div>
               <div class="spacer-xlarge"></div>
               <div data-w-id="c8cd16af-733e-b24e-92f5-25ec476d0657" class="partner-container">
                 <div class="partners-logo-gradient-left"></div>
@@ -177,24 +177,24 @@
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
                     <h2 class="intro-text">We</h2>
                     <div data-w-id="c6f0c9e9-544f-88dc-e8b3-4a8c0a764fba" class="image-toogle-block"><img sizes="100vw" srcset="images/Frame-7-p-500.jpg 500w, images/Frame-7-p-800.jpg 800w, images/Frame-7-p-1080.jpg 1080w, images/Frame-7.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-7.jpg" loading="lazy" class="alternate-image _01"><img sizes="100vw" srcset="images/Frame-6-p-500.jpg 500w, images/Frame-6-p-800.jpg 800w, images/Frame-6-p-1080.jpg 1080w, images/Frame-6.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-6.jpg" loading="lazy" class="alternate-image _02"><img sizes="100vw" srcset="images/Frame-8-p-500.jpg 500w, images/Frame-8-p-800.jpg 800w, images/Frame-8-p-1080.jpg 1080w, images/Frame-8.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-8.jpg" loading="lazy" class="alternate-image _03"><img sizes="100vw" srcset="images/Frame-5-p-500.jpg 500w, images/Frame-5-p-800.jpg 800w, images/Frame-5-p-1080.jpg 1080w, images/Frame-5.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-5.jpg" loading="lazy" class="alternate-image _04"><img sizes="100vw" srcset="images/Frame-1-p-500.jpg 500w, images/Frame-1-p-800.jpg 800w, images/Frame-1-p-1080.jpg 1080w, images/Frame-1.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-1.jpg" loading="lazy" class="alternate-image _05"></div>
-                    <h2 class="intro-text">help ambitious</h2>
+                    <h2 class="intro-text">don't just report</h2>
                   </div>
                 </div>
                 <div data-w-id="5e381122-b0e8-f025-902f-e7adcf321434" class="overflow-wrap">
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                    <h2 class="intro-text">brands stand out</h2>
+                    <h2 class="intro-text">SEO problems—we</h2>
                   </div>
                 </div>
                 <div data-w-id="bc2d527b-9054-fabc-9ffb-a9249d46253e" class="overflow-wrap">
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                    <h2 class="intro-text">through <span class="text-color-secondary">bold design</span></h2>
+                    <h2 class="intro-text"><span class="text-color-secondary">automatically</span> fix them</h2>
                   </div>
                 </div>
                 <div data-w-id="40288436-aa08-d945-3163-0f428ac41ee5" class="overflow-wrap">
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                    <h2 class="intro-text"><span class="text-color-secondary">and smart</span></h2>
+                    <h2 class="intro-text">with <span class="text-color-secondary">Claude</span></h2>
                     <div class="image-toogle-block"><img sizes="100vw" srcset="images/Frame-9-p-500.jpg 500w, images/Frame-9-p-800.jpg 800w, images/Frame-9-p-1080.jpg 1080w, images/Frame-9.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-9.jpg" loading="lazy" class="alternate-image _01"><img sizes="100vw" srcset="images/Frame-4-p-500.jpg 500w, images/Frame-4-p-800.jpg 800w, images/Frame-4-p-1080.jpg 1080w, images/Frame-4.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-4.jpg" loading="lazy" class="alternate-image _02"><img sizes="100vw" srcset="images/Frame-12-p-500.jpg 500w, images/Frame-12-p-800.jpg 800w, images/Frame-12-p-1080.jpg 1080w, images/Frame-12.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-12.jpg" loading="lazy" class="alternate-image _03"><img sizes="100vw" srcset="images/Frame-3-p-500.jpg 500w, images/Frame-3-p-800.jpg 800w, images/Frame-3-p-1080.jpg 1080w, images/Frame-3.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-3.jpg" loading="lazy" class="alternate-image _04"><img sizes="100vw" srcset="images/Frame-10-p-500.jpg 500w, images/Frame-10-p-800.jpg 800w, images/Frame-10-p-1080.jpg 1080w, images/Frame-10.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/Frame-10.jpg" loading="lazy" class="alternate-image _05"></div>
-                    <h2 class="intro-text"><span class="text-color-secondary">digital</span></h2>
+                    <h2 class="intro-text"><span class="text-color-secondary">AI</span></h2>
                   </div>
                 </div>
                 <div data-w-id="9a115856-9c4f-e78e-e2eb-e468a0c2de9a" class="overflow-wrap">
@@ -223,7 +223,7 @@
               </div>
               <div class="spacer-large"></div>
               <div class="max-width-medium align-center">
-                <p class="text-size-regular text-align-center">We are a digital agency focused on crafting immersive experiences that connect brands with people. Through strategy, design, and innovation, we build digital identities that inspire, engage, and drive growth.</p>
+                <p class="text-size-regular text-align-center">We are a SEO automation platform focused on crafting immersive experiences that connect brands with people. Through strategy, design, and innovation, we build digital identities that inspire, engage, and drive growth.</p>
               </div>
               <div class="spacer-medium"></div>
               <div class="intro-contact-wrap">
