Complete SEOLOGY.AI SaaS copy - all pages updated with psychological sales messaging (no Claude mentions)

--- a/public/404.html
+++ b/public/404.html
@@ -54,7 +54,7 @@
                 <div class="nav-link-overflow">
                   <a href="projects.html" data-w-id="32a340cc-db54-e7ac-40fb-6a617fcec414" class="nav-link w-inline-block">
                     <div class="nav-link-block">
-                      <div class="nav-text">Projects</div>
+                      <div class="nav-text">Results</div>
                       <div class="nav-text is-hover">Projects</div>
                     </div>
                   </a>
@@ -169,7 +169,7 @@
             </a>
             <a href="projects.html" data-w-id="5db47c9a-b574-23de-7915-600dabe1f3a7" class="menu-link w-inline-block">
               <div class="nav-link-block">
-                <div class="nav-text">Projects</div>
+                <div class="nav-text">Results</div>
                 <div class="nav-text is-hover">Projects</div>
               </div>
             </a>
