--- a/public/about.html
+++ b/public/about.html
@@ -55,7 +55,7 @@
                   <div class="nav-link-overflow">
                     <a href="projects.html" data-w-id="32a340cc-db54-e7ac-40fb-6a617fcec414" class="nav-link w-inline-block">
                       <div class="nav-link-block">
-                        <div class="nav-text">Projects</div>
+                        <div class="nav-text">Results</div>
                         <div class="nav-text is-hover">Projects</div>
                       </div>
                     </a>
@@ -104,7 +104,7 @@
                   <div class="header-text">Global</div>
                   <div data-is-ix2-target="1" class="location-lottie" data-w-id="c2b39ce5-c4ad-54b6-431d-f7a7fbb4be57" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/675dde8ad6d70cdee263a72a/6762c0e8938afb4a9f14f445_location.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="0" data-duration="3.1031029767111304" data-ix2-initial-state="0"></div>
                 </div>
-                <div id="w-node-a7bf8047-996f-633c-34bf-faa4fde12dad-919f1f91" class="header-text">Crafting Iconic Identities</div>
+                <div id="w-node-a7bf8047-996f-633c-34bf-faa4fde12dad-919f1f91" class="header-text">AI-Powered Automation</div>
               </div>
             </div>
           </div>
@@ -143,7 +143,7 @@
               <div class="text-wrapper">
                 <div data-w-id="caa88aa1-0ab3-ebfe-7242-64aba6c12f71" class="overflow-wrap">
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                    <h2 class="intro-text">A story of creativity</h2>
+                    <h2 class="intro-text">SEO tools report issues</h2>
                   </div>
                 </div>
                 <div data-w-id="caa88aa1-0ab3-ebfe-7242-64aba6c12f7d" class="overflow-wrap">
@@ -452,7 +452,7 @@
               </a>
               <a href="projects.html" data-w-id="5db47c9a-b574-23de-7915-600dabe1f3a7" class="menu-link w-inline-block">
                 <div class="nav-link-block">
-                  <div class="nav-text">Projects</div>
+                  <div class="nav-text">Results</div>
                   <div class="nav-text is-hover">Projects</div>
                 </div>
               </a>
