--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues</title>
-  <meta content="The first SEO platform powered by Claude AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." name="description">
+  <meta content="The first SEO platform powered by our AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." name="description">
   <meta content="SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues" property="og:title">
-  <meta content="The first SEO platform powered by Claude AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="og:description">
+  <meta content="The first SEO platform powered by our AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="og:description">
   <meta content="SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues" property="twitter:title">
-  <meta content="The first SEO platform powered by Claude AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="twitter:description">
+  <meta content="The first SEO platform powered by our AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -56,7 +56,7 @@
                   <div class="nav-link-overflow">
                     <a href="projects.html" data-w-id="32a340cc-db54-e7ac-40fb-6a617fcec414" class="nav-link w-inline-block">
                       <div class="nav-link-block">
-                        <div class="nav-text">Projects</div>
+                        <div class="nav-text">Results</div>
                         <div class="nav-text is-hover">Projects</div>
                       </div>
                     </a>
@@ -819,7 +819,7 @@
               </a>
               <a href="projects.html" data-w-id="5db47c9a-b574-23de-7915-600dabe1f3a7" class="menu-link w-inline-block">
                 <div class="nav-link-block">
-                  <div class="nav-text">Projects</div>
+                  <div class="nav-text">Results</div>
                   <div class="nav-text is-hover">Projects</div>
                 </div>
               </a>
