--- a/public/detail_project.html
+++ b/public/detail_project.html
@@ -18,8 +18,8 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/anyros-fantabulous-site.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.svg" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.svg" rel="apple-touch-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="page-wrapper">
@@ -28,7 +28,7 @@
         <div class="container-large">
           <div class="w-layout-grid nav-component-grid">
             <a href="index.html" id="w-node-_32a340cc-db54-e7ac-40fb-6a617fcec3ed-7fcec3e9" data-w-id="32a340cc-db54-e7ac-40fb-6a617fcec3ed" class="brand-link w-inline-block">
-              <div class="logo-wrap"><img loading="lazy" src="images/logo.svg" alt="Logo - SEOLOGY.AI Webflow Template" class="logo"><img loading="lazy" src="images/logo.svg" alt="Logo - SEOLOGY.AI Webflow Template" class="alternate-logo"></div>
+              <div class="logo-wrap"><img loading="lazy" src="images/logo.png" alt="Logo - SEOLOGY.AI Webflow Template" class="logo"><img loading="lazy" src="images/logo.png" alt="Logo - SEOLOGY.AI Webflow Template" class="alternate-logo"></div>
             </a>
             <nav role="navigation" id="w-node-_32a340cc-db54-e7ac-40fb-6a617fcec3f1-7fcec3e9" class="nav-menu w-nav-menu">
               <div class="background-navbar">
