COMPLETE CLEANUP: Replace ALL design agency content across all pages with SEOLOGY.AI SaaS messaging - About, Projects, Contact all updated

--- a/public/about.html
+++ b/public/about.html
@@ -309,7 +309,7 @@
                     <div class="card-line"></div>
                     <div class="spacer-medium"></div>
                   </div>
-                  <div class="member-description">Ethan leads the creative vision of every project, blending strategy and innovation to craft digital experiences that inspire brands and engage audiences globally.</div>
+                  <div class="member-description">Ethan leads the technical precision of every project, blending strategy and innovation to craft digital experiences that inspire brands and engage audiences globally.</div>
                 </div>
                 <div class="team-member-block">
                   <div class="team-member-image-wrapper"><img sizes="(max-width: 1279px) 100vw, 1280px" srcset="images/collaborator-03-p-500.jpg 500w, images/collaborator-03-p-800.jpg 800w, images/collaborator-03-p-1080.jpg 1080w, images/collaborator-03.jpg 1280w" alt="Image - SEOLOGY.AI Webflow Template" src="images/collaborator-03.jpg" loading="lazy" class="team-member-image"></div>
