--- a/public/index.html
+++ b/public/index.html
@@ -422,7 +422,7 @@
                       </div>
                     </div>
                     <div style="height:0px" class="service-description-item">
-                      <p class="service-description">We build distinctive brand identities that express your purpose and connect emotionally with your audience.</p>
+                      <p class="service-description">We build distinctive SEO fixes that express your purpose and connect emotionally with your audience.</p>
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-a0810e4b-86b4-493d-4f91-7e0c175ce5d9-919f1f8c" class="service-feature-item">
                           <div class="service-feature-text">✲ Logo Real-Time Monitoring</div>
@@ -536,7 +536,7 @@
                       </div>
                     </div>
                     <div style="height:0px" class="service-description-item">
-                      <p class="service-description">We craft beautiful, functional interfaces that deliver seamless digital experiences across all devices.</p>
+                      <p class="service-description">We deliver fast, functional interfaces that deliver seamless digital experiences across all devices.</p>
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-e03ae9dd-dac2-9689-5614-3d286d0f257d-919f1f8c" class="service-feature-item">
                           <div class="service-feature-text">✲ UI/UX Real-Time Monitoring</div>
@@ -643,7 +643,7 @@
                     <div id="w-node-f40b02ea-e208-d088-8e53-608f23aa6fca-919f1f8c" class="testimonial-line"></div>
                     <div id="w-node-_7399c2a2-4485-da52-a284-0458960aba49-919f1f8c" class="testimonial-content-block">
                       <div class="testimonial-title">Remarkable Creative Vision</div>
-                      <p class="testimonial-text">They perfectly understood our brand and turned our ideas into a stunning website. Every detail reflects our identity and connects deeply with our audience.</p>
+                      <p class="testimonial-text">They perfectly understood our brand and turned our ideas into a optimized site. Every detail reflects our identity and connects deeply with our audience.</p>
                     </div>
                     <div id="w-node-c9c4c16b-7d6c-e40b-2421-b36c9b946a7f-919f1f8c" class="testimonial-line"></div>
                     <div id="w-node-_306ce734-ff9f-92be-dbff-506bbab520ef-919f1f8c" class="client-content"><img src="images/client-03.jpg" loading="lazy" sizes="100vw" srcset="images/client-03-p-500.jpg 500w, images/client-03-p-800.jpg 800w, images/client-03-p-1080.jpg 1080w, images/client-03.jpg 1280w" alt="Image - SEOLOGY.AI CMS Connect Template" class="client-picture">
