--- a/public/projects.html
+++ b/public/projects.html
@@ -102,7 +102,7 @@
               </div>
               <div class="spacer-small"></div>
               <div class="max-width-large align-center">
-                <p class="text-size-medium text-align-center">Explore a selection of our most impactful projects — each crafted to inspire, engage, and elevate brands through design and innovation.</p>
+                <p class="text-size-medium text-align-center">Explore a selection of our most impactful projects — each crafted to inspire, engage, and elevate brands through AI and automation.</p>
               </div>
             </div>
           </div>
