FINAL CLEANUP: Replace ALL service details bullets with real SEO features - no more Logo Design, UI/UX, Wireframing nonsense

--- a/public/index.html
+++ b/public/index.html
@@ -426,13 +426,13 @@
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-a0810e4b-86b4-493d-4f91-7e0c175ce5d9-919f1f8c" class="service-feature-item">
                           <div class="service-feature-text">✲ Logo Real-Time Monitoring</div>
-                          <div class="service-feature-text">✲ Visual Identity</div>
+                          <div class="service-feature-text">✲ Auto-Optimization</div>
                           <div class="service-feature-text">✲ Brand Smart Scanning</div>
                         </div>
                         <div id="w-node-a0810e4b-86b4-493d-4f91-7e0c175ce5e0-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ Typography</div>
-                          <div class="service-feature-text">✲ Guidelines</div>
-                          <div class="service-feature-text">✲ Color Palette</div>
+                          <div class="service-feature-text">✲ Meta Tags</div>
+                          <div class="service-feature-text">✲ Best Practices</div>
+                          <div class="service-feature-text">✲ Schema Markup</div>
                         </div>
                       </div>
                     </div>
@@ -463,14 +463,14 @@
                       <p class="service-description">We define a clear roadmap to help your brand grow through data, creativity, and precise positioning.</p>
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-_96eb6e28-f790-399b-34cd-394ec4f33b3b-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ Market Research</div>
-                          <div class="service-feature-text">✲ Target Analysis</div>
-                          <div class="service-feature-text">✲ Positioning</div>
+                          <div class="service-feature-text">✲ Competitor Analysis</div>
+                          <div class="service-feature-text">✲ Keyword Research</div>
+                          <div class="service-feature-text">✲ Ranking Strategy</div>
                         </div>
                         <div id="w-node-_96eb6e28-f790-399b-34cd-394ec4f33b42-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ Insights</div>
-                          <div class="service-feature-text">✲ KPI Definition</div>
-                          <div class="service-feature-text">✲ Growth Planning</div>
+                          <div class="service-feature-text">✲ Analytics</div>
+                          <div class="service-feature-text">✲ Traffic Goals</div>
+                          <div class="service-feature-text">✲ SEO Roadmap</div>
                         </div>
                       </div>
                     </div>
@@ -501,14 +501,14 @@
                       <p class="service-description">We create high-performing websites with CMS Connect, combining design freedom and powerful CMS capabilities.</p>
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-a0c07f1c-a3e2-d0f1-3d94-625a98460327-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ CMS Setup</div>
-                          <div class="service-feature-text">✲ SEO Optimization</div>
+                          <div class="service-feature-text">✲ Platform Connect</div>
+                          <div class="service-feature-text">✲ Instant Fixes</div>
                           <div class="service-feature-text">✲ Responsive Real-Time Monitoring</div>
                         </div>
                         <div id="w-node-a0c07f1c-a3e2-d0f1-3d94-625a9846032e-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ Fast Loading</div>
-                          <div class="service-feature-text">✲ Easy Editing</div>
-                          <div class="service-feature-text">✲ Custom Animations</div>
+                          <div class="service-feature-text">✲ Speed Boost</div>
+                          <div class="service-feature-text">✲ Auto-Update</div>
+                          <div class="service-feature-text">✲ Rich Snippets</div>
                         </div>
                       </div>
                     </div>
@@ -540,13 +540,13 @@
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-e03ae9dd-dac2-9689-5614-3d286d0f257d-919f1f8c" class="service-feature-item">
                           <div class="service-feature-text">✲ UI/UX Real-Time Monitoring</div>
-                          <div class="service-feature-text">✲ Wireframing</div>
-                          <div class="service-feature-text">✲ Prototyping</div>
+                          <div class="service-feature-text">✲ Issue Reports</div>
+                          <div class="service-feature-text">✲ Fix Preview</div>
                         </div>
                         <div id="w-node-e03ae9dd-dac2-9689-5614-3d286d0f2584-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ Accessibility</div>
+                          <div class="service-feature-text">✲ Compliance</div>
                           <div class="service-feature-text">✲ Real-Time Monitoring Systems</div>
-                          <div class="service-feature-text">✲ Responsive Layouts</div>
+                          <div class="service-feature-text">✲ Mobile First</div>
                         </div>
                       </div>
                     </div>
@@ -578,13 +578,13 @@
                       <div class="w-layout-grid service-feature-grid">
                         <div id="w-node-_7967fd4f-ae16-9469-4546-791fc8d2eafa-919f1f8c" class="service-feature-item">
                           <div class="service-feature-text">✲ UI Performance Boost</div>
-                          <div class="service-feature-text">✲ Logo Animation</div>
-                          <div class="service-feature-text">✲ 3D Transitions</div>
+                          <div class="service-feature-text">✲ Load Time</div>
+                          <div class="service-feature-text">✲ Image Optimization</div>
                         </div>
                         <div id="w-node-_7967fd4f-ae16-9469-4546-791fc8d2eb01-919f1f8c" class="service-feature-item">
-                          <div class="service-feature-text">✲ Explainer Videos</div>
-                          <div class="service-feature-text">✲ Interactive Effects</div>
-                          <div class="service-feature-text">✲ Brand Storytelling</div>
+                          <div class="service-feature-text">✲ Performance Reports</div>
+                          <div class="service-feature-text">✲ Caching</div>
+                          <div class="service-feature-text">✲ Speed Metrics</div>
                         </div>
                       </div>
                     </div>
