--- a/public/index.html
+++ b/public/index.html
@@ -192,14 +192,14 @@
                 </div>
                 <div data-w-id="40288436-aa08-d945-3163-0f428ac41ee5" class="overflow-wrap">
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                    <h2 class="intro-text">using <span class="text-color-secondary">advanced</span></h2>
+                    <h2 class="intro-text">with <span class="text-color-secondary">AI</span></h2>
                     <div class="image-toogle-block"><img sizes="100vw" srcset="images/Frame-9-p-500.jpg 500w, images/Frame-9-p-800.jpg 800w, images/Frame-9-p-1080.jpg 1080w, images/Frame-9.jpg 1280w" alt="Image - SEOLOGY.AI CMS Connect Template" src="images/Frame-9.jpg" loading="lazy" class="alternate-image _01"><img sizes="100vw" srcset="images/Frame-4-p-500.jpg 500w, images/Frame-4-p-800.jpg 800w, images/Frame-4-p-1080.jpg 1080w, images/Frame-4.jpg 1280w" alt="Image - SEOLOGY.AI CMS Connect Template" src="images/Frame-4.jpg" loading="lazy" class="alternate-image _02"><img sizes="100vw" srcset="images/Frame-12-p-500.jpg 500w, images/Frame-12-p-800.jpg 800w, images/Frame-12-p-1080.jpg 1080w, images/Frame-12.jpg 1280w" alt="Image - SEOLOGY.AI CMS Connect Template" src="images/Frame-12.jpg" loading="lazy" class="alternate-image _03"><img sizes="100vw" srcset="images/Frame-3-p-500.jpg 500w, images/Frame-3-p-800.jpg 800w, images/Frame-3-p-1080.jpg 1080w, images/Frame-3.jpg 1280w" alt="Image - SEOLOGY.AI CMS Connect Template" src="images/Frame-3.jpg" loading="lazy" class="alternate-image _04"><img sizes="100vw" srcset="images/Frame-10-p-500.jpg 500w, images/Frame-10-p-800.jpg 800w, images/Frame-10-p-1080.jpg 1080w, images/Frame-10.jpg 1280w" alt="Image - SEOLOGY.AI CMS Connect Template" src="images/Frame-10.jpg" loading="lazy" class="alternate-image _05"></div>
-                    <h2 class="intro-text"><span class="text-color-secondary">AI automation</span></h2>
+                    <h2 class="intro-text"><span class="text-color-secondary">automation.</span></h2>
                   </div>
                 </div>
                 <div data-w-id="9a115856-9c4f-e78e-e2eb-e468a0c2de9a" class="overflow-wrap">
                   <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                    <h2 class="intro-text"><span class="text-color-secondary">strategies.</span></h2>
+                    <h2 class="intro-text"></h2>
                   </div>
                 </div>
               </div>
