Fix pricing page to have SEOLOGY SEO features with Cluely design style

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -136,10 +136,10 @@
                     <div class="button-text-wrap"><div class="button-text">Get for Windows</div></div>
                   </a>
                   <div style="flex-grow: 1;">
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Unlimited meeting notes</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Real-time AI answers</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Basic search</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ 3 sites connected</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ 3 sites</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ 100 SEO fixes/month</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Basic automation</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Email support</div>
                   </div>
                 </div>
 
@@ -160,9 +160,9 @@
                   <div style="flex-grow: 1;">
                     <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Everything in Starter</div>
                     <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Unlimited sites</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Advanced search & filters</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ People search</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Meeting memory</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Unlimited SEO fixes</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Advanced automation</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ API access</div>
                     <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Priority support</div>
                   </div>
                 </div>
@@ -170,22 +170,22 @@
                 <!-- Pro + Undetectability ($75/mo) -->
                 <div style="background: rgba(255,255,255,0.03); border-radius: 20px; padding: 32px; border: 1px solid rgba(255,255,255,0.08); display: flex; flex-direction: column;">
                   <div style="margin-bottom: 24px;">
-                    <h3 class="heading-style-h3" style="margin-bottom: 8px; font-size: 24px;">Pro + Undetectability</h3>
-                    <p class="text-size-regular" style="opacity: 0.6; font-size: 14px;">Stay invisible</p>
+                    <h3 class="heading-style-h3" style="margin-bottom: 8px; font-size: 24px;">Enterprise</h3>
+                    <p class="text-size-regular" style="opacity: 0.6; font-size: 14px;">For agencies & teams</p>
                   </div>
                   <div style="margin-bottom: 32px;">
-                    <div style="font-size: 56px; font-weight: 700; line-height: 1; margin-bottom: 4px;">$<span class="monthly-price">75</span><span class="annual-price" style="display: none;">60</span></div>
-                    <div class="text-size-regular" style="opacity: 0.6; font-size: 14px;">per month</div>
+                    <div style="font-size: 56px; font-weight: 700; line-height: 1; margin-bottom: 4px;">Custom</div>
+                    <div class="text-size-regular" style="opacity: 0.6; font-size: 14px;">contact sales</div>
                   </div>
-                  <a href="/contact" class="main-button w-inline-block" style="width: 100%; padding: 14px 24px; display: flex; justify-content: center; align-items: center; margin-bottom: 32px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1);">
-                    <div class="button-text-wrap"><div class="button-text">Get for Windows</div></div>
+                  <a href="/demo" class="main-button w-inline-block" style="width: 100%; padding: 14px 24px; display: flex; justify-content: center; align-items: center; margin-bottom: 32px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1);">
+                    <div class="button-text-wrap"><div class="button-text">Book Demo</div></div>
                   </a>
                   <div style="flex-grow: 1;">
                     <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Everything in Pro</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ <strong>Undetectable</strong> during screen share</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ No visible window</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Hotkey-only interface</div>
-                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Stealth mode</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ <strong>White-label reports</strong></div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Team collaboration</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ SSO & SAML</div>
+                    <div class="text-size-regular" style="margin-bottom: 16px; opacity: 0.9;">✓ Dedicated support</div>
                   </div>
                 </div>
 
@@ -201,49 +201,49 @@
                     <div style="font-weight: 600; opacity: 0.7;">Features</div>
                     <div style="font-weight: 600; text-align: center;">Starter</div>
                     <div style="font-weight: 600; text-align: center;">Pro</div>
-                    <div style="font-weight: 600; text-align: center;">Pro + Undetectability</div>
+                    <div style="font-weight: 600; text-align: center;">Enterprise</div>
                   </div>
 
                   <!-- Core Features -->
                   <div style="padding: 16px 0;">
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center;">
-                      <div>Unlimited meeting notes</div>
+                      <div>Automated SEO fixes</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                     </div>
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center; background: rgba(255,255,255,0.01);">
-                      <div>Real-time AI answers</div>
+                      <div>AI-powered analysis</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                     </div>
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center;">
-                      <div>Sites connected</div>
+                      <div>Sites</div>
                       <div style="text-align: center; opacity: 0.7;">3</div>
                       <div style="text-align: center; opacity: 0.7;">Unlimited</div>
                       <div style="text-align: center; opacity: 0.7;">Unlimited</div>
                     </div>
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center; background: rgba(255,255,255,0.01);">
-                      <div>Advanced search</div>
-                      <div style="text-align: center; opacity: 0.4;">—</div>
-                      <div style="text-align: center; font-size: 20px;">✓</div>
-                      <div style="text-align: center; font-size: 20px;">✓</div>
+                      <div>Monthly fixes</div>
+                      <div style="text-align: center; opacity: 0.7;">100</div>
+                      <div style="text-align: center; opacity: 0.7;">Unlimited</div>
+                      <div style="text-align: center; opacity: 0.7;">Unlimited</div>
                     </div>
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center;">
-                      <div>People search & memory</div>
+                      <div>API access</div>
                       <div style="text-align: center; opacity: 0.4;">—</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                       <div style="text-align: center; font-size: 20px;">✓</div>
                     </div>
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center; background: rgba(255,255,255,0.01);">
-                      <div><strong>Undetectable mode</strong></div>
+                      <div><strong>White-label reports</strong></div>
                       <div style="text-align: center; opacity: 0.4;">—</div>
                       <div style="text-align: center; opacity: 0.4;">—</div>
                       <div style="text-align: center; font-size: 20px; color: var(--text-color-secondary, #00ff88);">✓</div>
                     </div>
                     <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 24px; padding: 16px 24px; align-items: center;">
-                      <div>Hotkey-only interface</div>
+                      <div>Team collaboration</div>
                       <div style="text-align: center; opacity: 0.4;">—</div>
                       <div style="text-align: center; opacity: 0.4;">—</div>
                       <div style="text-align: center; font-size: 20px; color: var(--text-color-secondary, #00ff88);">✓</div>
