Make careers page FULL with 6 comprehensive job postings

--- a/public/careers.html
+++ b/public/careers.html
@@ -339,6 +339,34 @@
                   </div>
                   <div class="member-description">Scale our infrastructure to handle thousands of sites. Vercel, PostgreSQL, Redis, background job queues. Build monitoring, logging, and deployment automation.</div>
                 </div>
+                <div class="team-member-block">
+                  <div class="team-member-image-wrapper"><img sizes="(max-width: 1279px) 100vw, 1280px" srcset="images/collaborator-05-p-500.jpg 500w, images/collaborator-05-p-800.jpg 800w, images/collaborator-05-p-1080.jpg 1080w, images/collaborator-05.jpg 1280w" alt="Image - SEOLOGY.AI SEO Platform" src="images/collaborator-03.jpg" loading="lazy" class="team-member-image"></div>
+                  <div class="card-line"></div>
+                  <div class="spacer-medium"></div>
+                  <div class="member-content-block">
+                    <div class="member-name">Growth Marketing Lead</div>
+                    <div class="spacer-xsmall"></div>
+                    <div class="member-postion-text">Remote  •  $130k-$180k + Equity</div>
+                    <div class="spacer-medium"></div>
+                    <div class="card-line"></div>
+                    <div class="spacer-medium"></div>
+                  </div>
+                  <div class="member-description">Drive our growth strategy across SEO, content, partnerships, and paid channels. Own metrics from awareness to conversion. Experience scaling B2B SaaS from $1M to $10M ARR.</div>
+                </div>
+                <div class="team-member-block">
+                  <div class="team-member-image-wrapper"><img sizes="(max-width: 1279px) 100vw, 1280px" srcset="images/collaborator-06-p-500.jpg 500w, images/collaborator-06-p-800.jpg 800w, images/collaborator-06-p-1080.jpg 1080w, images/collaborator-06.jpg 1280w" alt="Image - SEOLOGY.AI SEO Platform" src="images/collaborator-02.jpg" loading="lazy" class="team-member-image"></div>
+                  <div class="card-line"></div>
+                  <div class="spacer-medium"></div>
+                  <div class="member-content-block">
+                    <div class="member-name">Customer Success Manager</div>
+                    <div class="spacer-xsmall"></div>
+                    <div class="member-postion-text">Remote  •  $100k-$140k + Equity</div>
+                    <div class="spacer-medium"></div>
+                    <div class="card-line"></div>
+                    <div class="spacer-medium"></div>
+                  </div>
+                  <div class="member-description">Help enterprise customers succeed with SEOLOGY.AI. Own onboarding, training, support escalations, and expansion. Technical SEO knowledge required. Experience with Shopify/WordPress a plus.</div>
+                </div>
               </div>
             </div>
           </div>
