--- a/public/enterprise.html
+++ b/public/enterprise.html
@@ -316,6 +316,190 @@
           </div>
         </div>
       </section>
+
+      <!-- Enterprise Features Section -->
+      <section class="section-home-services" style="background: rgba(0,0,0,0.2);">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div style="text-align: center; margin-bottom: 64px;">
+                <h2 class="heading-style-h2">Enterprise <span class="text-color-secondary">Features</span></h2>
+                <div class="spacer-medium"></div>
+                <p class="text-size-regular" style="max-width: 700px; margin: 0 auto; opacity: 0.8;">Everything you need to manage SEO at scale for thousands of sites</p>
+              </div>
+
+              <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 32px; margin-bottom: 64px;">
+                <!-- Bulk Management -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">Bulk Site Management</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Manage unlimited sites from one dashboard. Apply fixes to hundreds of sites simultaneously. Group sites by brand, region, or team for organized workflows.</p>
+                </div>
+
+                <!-- White Label -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">White-Label Reports</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Custom branded reports for your clients. PDF exports, scheduled email delivery, and embedded dashboards with your company's logo and colors.</p>
+                </div>
+
+                <!-- SSO/SAML -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">SSO & SAML</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Integrate with Okta, Azure AD, or Google Workspace. SAML 2.0 support for secure enterprise authentication. SCIM for automated user provisioning.</p>
+                </div>
+
+                <!-- API Access -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">Full API Access</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">RESTful API with comprehensive documentation. Webhooks for real-time notifications. Build custom integrations and workflows tailored to your needs.</p>
+                </div>
+
+                <!-- Dedicated Support -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 9h-2V5h2v6zm0 4h-2v-2h2v2z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">Dedicated Support</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Named account manager, priority email and Slack support, onboarding assistance, and quarterly business reviews to ensure success.</p>
+                </div>
+
+                <!-- Custom Integrations -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">Custom Integrations</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Need a custom CMS connector? We'll build it. Custom workflows, data pipelines, and integrations with your internal tools available on Enterprise plans.</p>
+                </div>
+
+                <!-- Audit Logs -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">Comprehensive Audit Logs</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Track every action across your organization. Who made what change, when, and why. Export logs for compliance audits and security reviews.</p>
+                </div>
+
+                <!-- Role-Based Access -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">Role-Based Access Control</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Granular permissions for teams. Admin, Editor, Viewer roles with site-level access controls. Perfect for agencies managing multiple client accounts.</p>
+                </div>
+
+                <!-- SLA -->
+                <div style="background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 20px; padding: 32px;">
+                  <div style="width: 56px; height: 56px; background: rgba(0,255,136,0.1); border: 1px solid rgba(0,255,136,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-bottom: 20px;">
+                    <svg style="width: 28px; height: 28px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
+                  </div>
+                  <h3 class="heading-style-h4" style="font-size: 20px; margin-bottom: 12px;">99.9% Uptime SLA</h3>
+                  <p class="text-size-regular" style="opacity: 0.7; line-height: 1.6;">Guaranteed uptime with financial penalties if we miss our SLA. Multi-region redundancy, automatic failover, and 24/7 infrastructure monitoring.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Enterprise Pricing Section -->
+      <section class="section-home-services" style="background: linear-gradient(135deg, rgba(0,255,136,0.05) 0%, rgba(0,0,0,0.3) 100%);">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div style="text-align: center; margin-bottom: 64px;">
+                <h2 class="heading-style-h2">Enterprise <span class="text-color-secondary">Pricing</span></h2>
+                <div class="spacer-medium"></div>
+                <p class="text-size-regular" style="max-width: 700px; margin: 0 auto; opacity: 0.8;">Flexible pricing for organizations of any size. Volume discounts available.</p>
+              </div>
+
+              <div style="background: rgba(0,0,0,0.4); border: 1px solid rgba(255,255,255,0.1); border-radius: 24px; padding: 64px; max-width: 900px; margin: 0 auto;">
+                <div style="text-align: center; margin-bottom: 48px;">
+                  <div style="font-size: 64px; font-weight: 700; margin-bottom: 16px;">Custom Pricing</div>
+                  <p class="text-size-regular" style="font-size: 18px; opacity: 0.8;">Starting at $500/month for 100 sites</p>
+                </div>
+
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 32px; margin-bottom: 48px;">
+                  <div>
+                    <h4 style="font-size: 16px; font-weight: 600; margin-bottom: 20px; opacity: 0.9;">What's Included:</h4>
+                    <div style="display: flex; flex-direction: column; gap: 14px;">
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Unlimited sites</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Unlimited SEO fixes</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">White-label reports</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">SSO/SAML authentication</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Full API access</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div>
+                    <h4 style="font-size: 16px; font-weight: 600; margin-bottom: 20px; opacity: 0.9;">Enterprise Support:</h4>
+                    <div style="display: flex; flex-direction: column; gap: 14px;">
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Dedicated account manager</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Priority Slack support</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Custom integrations</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">Quarterly business reviews</span>
+                      </div>
+                      <div style="display: flex; align-items: center; gap: 12px;">
+                        <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88); flex-shrink: 0;" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                        <span style="font-size: 15px;">99.9% uptime SLA</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div style="text-align: center;">
+                  <a href="demo.html" class="main-button w-inline-block" style="display: inline-block;">
+                    <div class="button-text-wrap">
+                      <div class="button-text">Schedule Enterprise Demo</div>
+                    </div>
+                  </a>
+                  <p style="font-size: 13px; opacity: 0.6; margin-top: 20px;">Volume discounts available for 500+ sites</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="cta">
         <div class="dividing-line"></div>
         <div data-w-id="2b34b5ed-d271-0fd8-fca9-4d5710c19d11" class="cta-wrapper">
